Target view alignment and width

--- a/bhtom_targets/static/bhtom_targets/css/main.css
+++ b/bhtom_targets/static/bhtom_targets/css/main.css
@@ -15,3 +15,11 @@ dl {
 span.featured {
   pointer-events: none;
 }
+
+.container {
+  margin-left: 0px;
+}
+
+.target-right > * {
+  width: 1000px;
+}
