--- a/bhtom_dataproducts/templates/bhtom_dataproducts/partials/photometry_for_target.html
+++ b/bhtom_dataproducts/templates/bhtom_dataproducts/partials/photometry_for_target.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-lg-9">
     <h4>Photometry</h4>
   </div>
-  <div class="col-md-4">
+  <div class="col-lg-3 text-right">
     <a href="{% url 'dataproducts:update-reduced-data' %}?target_id={{ target.id }}" class="btn btn-primary" title="Update Targets">Check for new data</a>
   </div>
 </div>
