--- a/bhtom_targets/templates/bhtom_targets/partials/target_distribution.html
+++ b/bhtom_targets/templates/bhtom_targets/partials/target_distribution.html
@@ -1,1 +1,40 @@
-{{ figure|safe }}
+{% comment %} {{ figure|safe }} {% endcomment %}
+
+<!-- insert this snippet where you want Aladin Lite viewer to appear -->
+<div id="aladin-lite-div" style="width:1200px;height:600px;margin-left:auto;margin-right:auto;"></div>
+<script type="text/javascript" src="https://aladin.cds.unistra.fr/AladinLite/api/v3/latest/aladin.js" charset="utf-8"></script>
+<script type="text/javascript">
+    let aladin;
+    A.init.then(() => { //then makes the aladin async
+        //CDS/P/DM/I/355/gaiadr3
+        //CDS/P/Mellinger/color
+        //JAXA/P/CONSTELLATIONS/Image/Lines
+        aladin = A.aladin('#aladin-lite-div', {survey: "CDS/P/Mellinger/color", fov:360, 
+        projection: "AIT", showProjectionControl: true,
+        showCooGrid: false, showCooGridControl: true,
+        expandLayersControl: false});
+
+        // Get the targets from the Django template context
+        var targets = {{ targets|safe }};
+
+        // Loop over each target and add it to the Aladin Lite viewer
+        var markers_list = [];
+        for (var i = 0; i < targets.length; i++) {
+            var target = targets[i];
+//            document.write(target.ra);
+            var marker = A.marker(target.ra, target.dec, 
+            {popupTitle: '<a target="_blank" href="'+target.name+'">'+target.name+'</a>',
+             popupDesc: '<em>Last mag: </em>'+target.last_mag+'<br/><em>'+target.classification+'</em> '
+            });
+
+            markers_list.push(marker);
+        }
+
+        var markerLayer = A.catalog();
+        aladin.addCatalog(markerLayer);
+        markerLayer.addSources(markers_list);
+
+        //TODO: add hovering display of the info and clicking leading to the webpage
+    });
+</script> 
+
