margin change, css edited

--- a/bhtom_targets/static/bhtom_targets/css/main.css
+++ b/bhtom_targets/static/bhtom_targets/css/main.css
@@ -16,6 +16,15 @@ span.featured {
   pointer-events: none;
 }
 
+
+.container {
+  margin-left: 0px;
+}
+
+.target-right > * {
+  width: 1000px;
+}
+
 .target-right > * {
   width: 1000px;
 }
