--- a/bhtom_dataproducts/templates/bhtom_dataproducts/partials/dataproduct_list_for_target.html
+++ b/bhtom_dataproducts/templates/bhtom_dataproducts/partials/dataproduct_list_for_target.html
@@ -5,10 +5,8 @@
   <thead>
     <tr>
       <th></th>
-      <th></th>
       <th>Filename</th>
       <th>Type</th>
-      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
@@ -20,19 +18,15 @@
       {% else %}
       <td><span class="btn btn-secondary active featured">Featured</span></td>
       {% endif %}
-      <td>
-        {% if 'fits' in product.get_file_name or product.data_product_type == 'fits_file' %}
-        {% include 'bhtom_dataproducts/partials/js9_button.html' with url=product.data.url only %}
-        {% endif %}
-      </td>
-      <td><a href="{{ product.data }}">{{ product.data }}</a></td>
+
+      <td><div title="{{ product.data }}">{{ product.data }}</div></td>
       <td>
         {% if product.data_product_type %}
         {{ product.get_type_display }}
         {% endif %}
         </a>
       </td>
-      <td><a href="{% url 'bhtom_base.bhtom_dataproducts:delete' product.id %}" class="btn btn-danger">Delete</a></td>
+
     </tr>
     {% endfor %}
 </table>
