--- a/bhtom_targets/templates/bhtom_targets/partials/aladin.html
+++ b/bhtom_targets/templates/bhtom_targets/partials/aladin.html
@@ -1,5 +1,7 @@
+{% load static %}
 <!-- include Aladin Lite CSS file in the head section of your page -->
-<link rel="stylesheet" href="//aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+<link rel="stylesheet" href="{% static 'aladin/css/aladin.min.css' %}">
+
 <!-- insert this snippet where you want Aladin Lite viewer to appear and after the loading of jQuery -->
 <!-- <h3>Survey View</h3> -->
 <div id="aladin-lite-div" style="width:300px;height:300px;"></div>
@@ -41,7 +43,8 @@
     </div>
   </form>
 </div>
-<script type="text/javascript" src="//aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js" charset="utf-8"></script>
+<script src="{% static 'aladin/js/aladin.min.js' %}"></script>
+
 <script type="text/javascript">
 
     let aladin = A.aladin('#aladin-lite-div', {
