--- a/bhtom_common/templates/comments/list.html
+++ b/bhtom_common/templates/comments/list.html
@@ -1,4 +1,37 @@
 {% load gravatar %}
+{% load custom_filters %}
+
+{% if not object %}
+<ul class="list-unstyled">
+  {% for comment in data.comment_list %}
+  <li class="media ml-2 mt-1">
+    <img class="mr-3 rounded-circle img-fluid avatar" src="{% gravatar_url comment.user.email 50 %}"
+      alt="{{ comment.user.email }}">
+    <div class="media-body">
+      <small class="mt-0 mb-1">
+        {{ comment.user.first_name }} {{ comment.user.last_name }}
+        on
+        {% for target in data.targets %}
+          {% if target.id == comment.object_pk|add:0  %}
+            <a href="{% url 'bhtom_targets:detail' comment.object_pk %}"> {{ target.name}} </a>
+          {% endif %}      
+        {% endfor %}
+        {{ comment.submit_date|date }}
+        {% if comment.user == user or user.is_superuser %}
+        <a href="{% url 'comment-delete' pk_target=target.id pk=comment.id %}"
+          class="btn btn-sm btn-danger float-right">✖</a>
+        {% endif %}
+      </small>
+      <p class="mr-1">{{ comment.comment|split_text|truncatewords:30 }}</p>
+    </div>
+  </li>
+  {% empty %}
+  <p>No comments yet.</p>
+  {% endfor %}
+</ul>
+{% endif %}
+
+{% if  object %}
 <ul class="list-unstyled">
   {% for comment in comment_list %}
   <li class="media ml-2 mt-1">
@@ -7,9 +40,7 @@
     <div class="media-body">
       <small class="mt-0 mb-1">
         {{ comment.user.first_name }} {{ comment.user.last_name }}
-        {% if not object %}
-        on <a href="{{ comment.content_object.get_absolute_url }}">{{ comment.content_object.identifier }}</a>
-        {% endif %}
+        on
         {{ comment.submit_date|date }}
         {% if comment.user == user or user.is_superuser %}
         <a href="{% url 'comment-delete' pk_target=target.id pk=comment.id %}"
@@ -23,3 +54,4 @@
   <p>No comments yet.</p>
   {% endfor %}
 </ul>
+{% endif %}
