--- a/bhtom_common/templates/auth/partials/user_list.html
+++ b/bhtom_common/templates/auth/partials/user_list.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 <h4>Active Users</h4>
 <div class="row">
     <div class="col-md-12">
@@ -14,7 +15,7 @@
           </tr>
         </thead>
         <tbody>
-          {% for user in users %}
+            {% for user in users|dictsort:"date_joined"|reverse %}
           <tr>
             <td>{{ user.username }}</td>
             <td>{{ user.first_name }} {{ user.last_name }}</td>
