--- a/bhtom_common/templates/auth/user_list.html
+++ b/bhtom_common/templates/auth/user_list.html
@@ -1,5 +1,6 @@
 {% extends 'bhtom_common/base.html' %}
 {% load user_extras %}
+{% load custom_filters %}
 {% block title %}User Management{% endblock %}
 {% block content %}
 {% group_list %}
