--- a/bhtom_targets/templates/bhtom_targets/partials/target_table.html
+++ b/bhtom_targets/templates/bhtom_targets/partials/target_table.html
@@ -1,7 +1,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th><input type="checkbox" id="selectPage" onClick="select_page(this, {{ targets|length }})" /></th>
+      <th><input type="checkbox" id="selectPage" onClick="select_page(this, {{ target_count }})" /></th>
       <th>Name</th>
       <th>Type</th>
       {% if request.GET.type == 'SIDEREAL' %}
