--- a/bhtom_common/templates/registration/login.html
+++ b/bhtom_common/templates/registration/login.html
@@ -4,12 +4,15 @@
 {% block content %}
 <div class="row justify-content-md-center">
   <div class="col-md-4">
-    <form action="{% url 'login' %}?next={{next}}" method="POST" class="form">
+    <form action="{% url 'login' %}?next={{ next }}" method="POST" class="form">
       {% csrf_token %}
       {% bootstrap_form form %}
-      {% buttons %}
-        <button type="submit" class="btn btn-primary">Login</button>
-      {% endbuttons %}
+      <div class="d-flex justify-content-between align-items-center">
+        {% buttons %}
+          <button type="submit" class="btn btn-primary">Login</button>
+        {% endbuttons %}
+        <a href="{% url 'password_reset' %}">Forgot password?</a>
+      </div>
     </form>
   </div>
 </div>
