--- a/bhtom_targets/templates/bhtom_targets/target_grouping.html
+++ b/bhtom_targets/templates/bhtom_targets/target_grouping.html
@@ -11,11 +11,12 @@
     </div>
 </div>
 <form action="{% url 'targets:list' %}" method="GET">
-  <table class="table table-striped">
+  <table id="target-groups-table" class="table table-striped sortable">
     <thead>
       <tr>
         <th>Group</th>
         <th>Total Targets</th>
+        <th>Creation Date</th>
         <th>Delete</th>
       </tr>
     </thead>
@@ -24,16 +25,30 @@
       <tr>
         <td><button type="submit" class="btn btn-link" name="targetlist__name" value="{{group.id}}" title="View Group">{{ group.name }}</button></td>
         <td valign="middle">{{ group.targets.count }}</td>
+        <td valign="middle">{{ group.created }}</td>
         <td><a href="{% url 'targets:delete-group' group.id%}" title="Delete Group" class="btn btn-danger">Delete</a></td>
       </tr>
       {% empty %}
       <tr>
         <td>No groups yet</td>
         <td></td>
+        <td></td>
+        <td></td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </form>
-{% bootstrap_pagination page_obj extra=request.GET.urlencode %}
+
+
+<!-- Include DataTables -->
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
+<script>
+  $(document).ready(function() {
+      $('#target-groups-table').DataTable({
+          "paging": false,
+          "searching": false
+      });
+  });
+</script>
 {% endblock %}
